# generator-dsx-misvc

./: .dockerignore  .eslintrc.js  .gitignore  .yo-rc.json  CHANGELOG.md  Dockerfile  README.md  package.json
generators/app/: index.js
generators/app/templates/node/: .dockerignore  .eslintrc  .gitignore  .lintstagedrc  .npmignore  Dockerfile  jest.config.js  package.json
generators/app/templates/node/src/: app.js  routes.js  server.js
generators/app/templates/node/tests/: routes.test.js
generators/app/templates/python/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
generators/app/templates/python/src/: main.py
generators/app/templates/python/src/static/css/: template.css
generators/app/templates/python/src/templates/: home.html  template.html
generators/app/templates/python/tests/: test_app.py
generators/app/templates/react/template/: .editorconfig  .eslintrc  .lintstagedrc  .rescriptsrc.js  nginx.conf
generators/app/templates/vue/: presets.json
generators/app/templates/vue/template/: .eslintrc  .lintstagedrc  Dockerfile  nginx.conf
generators/app/utils/: generateChangelog.js  generateReadme.js  logger.js  spinner.js
utils/: env.js  generateReadme.js
