# Poetry
[tool.poetry]
name = "servicename"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.0.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

# Black
[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[virtualenvs]
create = false

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
